# edge-analytics

./: .env.example  .gitignore  Caddyfile.example  Cargo.toml  Dockerfile  README.md  docker-compose.example.yaml  docker-compose.test.yaml
.github/workflows/: ci.yaml  deploy.yaml  notify-deploy.yaml  release.yaml
src/: error.rs  handlers.rs  main.rs  rate_limit.rs  sitemap.rs  state.rs  time.rs
tests/: bench.sh  sitemap.xml  stress.rs
